fixed book seach image being very small on iphone

--- a/src/css/small.css
+++ b/src/css/small.css
@@ -455,7 +455,7 @@ button.btnI {
 @media only screen and (max-width: 470px) {
   .result-div img {
     margin: 0 auto;
-    width: 50%;
+    width: 100%;
     grid-column: 1/3;
     grid-row: 1/2;
   }
